# Simple-Ai-agent

./: .gitignore  README.md  USAGE.md  architecture.md  cli.py  config.py  graceful_stop.py  launch_cli.py  main.py  memory_write.py  open_agent_cmd.bat  pyproject.toml  quality.py  requirements.txt  skill.md
agent_loop/: decide.py  loop.py
api/: auth.py  dependencies.py  routes.py  schemas.py
context/: builder.py  ltm.py  retrieval.py  run_context.py  stm.py
llm/: openrouter.py  prompt.py  router.py
pipeline/: input.py  policy.py  refusal.py
prompts/: system.txt
tools/: echo.py  executor.py  guardrails.py  registry.py  run_python.py  search.py  selector.py  shell.py  tools.md
tools/core/: __init__.py  executor.py  guardrails.py  registry.py  selector.py
